config/iptables
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -o gre+ -j ACCEPT
-A POSTROUTING -o tun+ -j ACCEPT
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DROPnLOG - [0:0]
:INBOUND - [0:0]
:VPN_PEERS - [0:0]
:MANAGEMENT - [0:0]
:OUTBOUND - [0:0]
:OUTPUT_ETH0 - [0:0]
:OUTPUT_ETH1 - [0:0]
:OUTPUT_ETH2 - [0:0]
:OUTPUT_GRE - [0:0]
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROPnLOG
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m limit --limit 10/s -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -m limit --limit 5/s -j ACCEPT
-A INPUT -p esp -j VPN_PEERS
-A INPUT -p 47 -j VPN_PEERS 
-A INPUT -p udp -m udp --dport 500 -j VPN_PEERS
-A INPUT -p udp -m udp --dport 4500 -j VPN_PEERS
-A INPUT -p udp --dport 161 -j MANAGEMENT
-A INPUT -p tcp --dport 11122 -j MANAGEMENT
-A INPUT -j DROPnLOG
-A MANAGEMENT -s 73.73.235.32 -j ACCEPT
-A FORWARD -j DROPnLOG
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o gre+ -j ACCEPT
-A OUTPUT -p tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp --dport 11122 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 500 -j VPN_PEERS
-A OUTPUT -p udp -m udp --dport 4500 -j VPN_PEERS
-A OUTPUT -p esp -j VPN_PEERS
-A OUTPUT -p 47 -j VPN_PEERS
-A OUTPUT -j DROPnLOG
-A DROPnLOG -m addrtype --dst-type MULTICAST -j DROP
-A DROPnLOG -m addrtype --dst-type BROADCAST -j DROP
-A DROPnLOG -m recent --rcheck --seconds 30 --reap --hitcount 5 --name portscan --mask 255.255.255.255 --rsource -j DROP
-A DROPnLOG -m limit --limit 5/sec -j LOG
-A DROPnLOG -m recent --set --name portscan --mask 255.255.255.255 --rsource -j DROP
COMMIT
